# x86-sok

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifact_eval/: README.md  collect_figure_3.sh  collect_figure_5.sh  collect_table_5.sh  collect_table_6.sh  plot_violin_seaborn_jmptbl_ida.py  run_figure_3.sh  run_figure_3_test.sh  run_figure_5.sh  write_csv.py
ccr/: LICENSE.TXT  constants.py  elfParser.py  offset.py  prander.py  reconstructInfo.py  reorderInfo.py  report.py  shuffleInfoReader.py  unit.py  util.py
compare/: NoRetStruct.py  compareArm32AngrFuncs.py  compareCFG.py  compareCFGAngr.py  compareCFGWin.py  compareFuncs.py  compareFuncsArmMips.py  compareFuncsWin.py  compareFuncsWithSym.py  compareInsts.py  compareInstsArmMips.py  compareInstsWin.py  compareInstsX86.py  compareJmpTable.py  compareJmpTableArmMips.py  compareJmpTableGt.py  compareJmpTableMipsGhidra.py  compareJmpTableWin.py  compareJmpTableX86.py  compareNonRet.py  compareNonRetWin.py  compareReference.py  compareReferenceWin.py  compareTailCall.py  compareTailCallWin.py  deps.py  findNonRets.py  findNonRetsWin.py  inst.py  util.py
doc/: porting.md
extract_gt/: BlockUtil.py  FixupCheck.py  LICENSE.txt  NoRetStruct.py  PEUtil.py  bbinfoconfig.py  capstoneCallback.py  deps.py  extractBB.py  extractXref.py  findNoRets.py  imm.py  mipsRegsAcc.py  mipsRelocs.py  run_extract_linux.sh  test.py
gt/: Dockerfile  build.sh  clang64.rc  docker_build.sh  gcc32.rc  requirements.txt
protobuf_def/: blocks.proto  blocks_pb2.py  refInf_pb2.py
script/: collect_new.sh  extract_strip.sh  (+24 more)
(+2879 files in other folders)
